[gd_scene load_steps=27 format=2]

[ext_resource path="res://scenes/snails/snail_normal.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/arrow_place_manager.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/grid_click_manager.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sfx/explosion.ogg" type="AudioStream" id=4]
[ext_resource path="res://scripts/sound_controller.gd" type="Script" id=5]
[ext_resource path="res://scripts/timer_label.gd" type="Script" id=6]
[ext_resource path="res://assets/music/Normal Theme.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/music/Speedy Theme.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/music/Full Theme.ogg" type="AudioStream" id=9]
[ext_resource path="res://scripts/music_controller.gd" type="Script" id=10]
[ext_resource path="res://assets/fonts/ui_font_large.tres" type="DynamicFont" id=11]
[ext_resource path="res://scenes/wall_section.tscn" type="PackedScene" id=12]
[ext_resource path="res://scripts/game_state_manager.gd" type="Script" id=13]
[ext_resource path="res://scripts/global_timer.gd" type="Script" id=14]
[ext_resource path="res://assets/sprites/side_panel.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/mr_snailsworth.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/next_snail_display.png" type="Texture" id=18]
[ext_resource path="res://assets/fonts/ui_font_medium.tres" type="DynamicFont" id=19]
[ext_resource path="res://assets/sprites/snails/normal_snail.png" type="Texture" id=20]
[ext_resource path="res://scripts/next_snail_display.gd" type="Script" id=21]
[ext_resource path="res://scripts/snail_order_manager.gd" type="Script" id=22]
[ext_resource path="res://assets/sprites/test_circle.png" type="Texture" id=23]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("NextSnailSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out_and_in"
tracks/0/type = "value"
tracks/0/path = NodePath("NextSnailSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("LandingIndicator:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.913725, 0.184314, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_in"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("LandingIndicator:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.913725, 0.184314, 0 ), Color( 0, 0.913725, 0.184314, 1 ) ]
}

[node name="Node2D" type="Node2D"]
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="Control" parent="."]
margin_left = -32.0
margin_top = -32.0
margin_right = 2144.0
margin_bottom = 1184.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="SidePanel" type="Sprite" parent="UI"]
position = Vector2( 1449, 608 )
scale = Vector2( 1.31667, 1 )
texture = ExtResource( 16 )

[node name="NextSnailDisplay" type="Sprite" parent="UI/SidePanel"]
position = Vector2( 1.51894, -192 )
scale = Vector2( 0.922929, 1.08439 )
texture = ExtResource( 18 )
script = ExtResource( 21 )

[node name="NextSnailLabel" type="Label" parent="UI/SidePanel/NextSnailDisplay"]
margin_left = -106.156
margin_top = 128.183
margin_right = 106.844
margin_bottom = 176.183
custom_fonts/font = ExtResource( 19 )
text = "Next Snail"
align = 1
valign = 1

[node name="NextSnailSprite" type="Sprite" parent="UI/SidePanel/NextSnailDisplay"]
position = Vector2( -0.00012207, -3.05176e-05 )
scale = Vector2( 5.76042, 5.53307 )
texture = ExtResource( 20 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/SidePanel/NextSnailDisplay"]
anims/RESET = SubResource( 1 )
anims/fade_out_and_in = SubResource( 2 )

[node name="MrSnailsworth" type="Sprite" parent="UI/SidePanel"]
position = Vector2( 0.379761, 399 )
scale = Vector2( 2.27848, 3 )
texture = ExtResource( 17 )

[node name="LivesLabel" type="Label" parent="UI/SidePanel"]
margin_left = -104.051
margin_top = -480.0
margin_right = 108.949
margin_bottom = -432.0
custom_fonts/font = ExtResource( 19 )
text = "Lives"
align = 1
valign = 1

[node name="TimerLabel" type="Label" parent="UI/SidePanel"]
margin_left = -130.633
margin_top = -588.0
margin_right = 125.367
margin_bottom = -491.0
custom_fonts/font = ExtResource( 11 )
text = "10"
align = 1
valign = 1
script = ExtResource( 6 )

[node name="GameStateManager" type="Node" parent="."]
script = ExtResource( 13 )

[node name="GridClickManager" parent="." instance=ExtResource( 3 )]

[node name="SnailOrderManager" type="Node2D" parent="."]
script = ExtResource( 22 )

[node name="LandingIndicator" type="Sprite" parent="SnailOrderManager"]
modulate = Color( 0, 0.913725, 0.184314, 0 )
texture = ExtResource( 23 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="SnailOrderManager"]
anims/RESET = SubResource( 3 )
anims/fade_in = SubResource( 4 )

[node name="ArrowPlaceManager" parent="." instance=ExtResource( 2 )]

[node name="GlobalTimer" type="Timer" parent="."]
autostart = true
script = ExtResource( 14 )

[node name="HalfTickTimer" type="Timer" parent="GlobalTimer"]
wait_time = 0.5
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 822, 575 )
current = true
zoom = Vector2( 1.7, 1.7 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="SnailNormal" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 448 )

[node name="SnailNormal2" parent="." instance=ExtResource( 1 )]
position = Vector2( 928, 448 )
snail_direction = Vector2( -1, 0 )

[node name="MusicController" type="Node" parent="."]
script = ExtResource( 10 )

[node name="SpeedyThemePlayer" type="AudioStreamPlayer" parent="MusicController"]
stream = ExtResource( 7 )

[node name="FullThemePlayer" type="AudioStreamPlayer" parent="MusicController"]
stream = ExtResource( 8 )

[node name="BigThemePlayer" type="AudioStreamPlayer" parent="MusicController"]
stream = ExtResource( 9 )

[node name="NormalThemePlayer" type="AudioStreamPlayer" parent="MusicController"]
stream = ExtResource( 7 )

[node name="ExplosionPlayer" type="AudioStreamPlayer" parent="MusicController"]
stream = ExtResource( 4 )

[node name="SfxController" type="Node" parent="."]
script = ExtResource( 5 )

[node name="ExplosionPlayer" type="AudioStreamPlayer" parent="SfxController"]
stream = ExtResource( 4 )

[node name="Wall" parent="." instance=ExtResource( 12 )]
position = Vector2( -24, -24 )

[node name="Wall2" parent="." instance=ExtResource( 12 )]
position = Vector2( 0, -24 )
rotation = 1.5708

[node name="Wall3" parent="." instance=ExtResource( 12 )]
position = Vector2( -24, 1152 )

[node name="Wall4" parent="." instance=ExtResource( 12 )]
position = Vector2( 1176, -24 )
rotation = 1.5708
